objects/Test_object__c.object
<CustomObject>
    <label>Test object</label>
    <nameField>
        <label>Test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Field_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field one</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pan_number__c</fullName>
        <label>pan number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_three__c</fullName>
        <label>number three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_one_field__c</fullName>
        <label>Text one field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>